--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,17 +12,22 @@ permissions:
   packages: read  # For pulling container images
 
 jobs:
-  build-amd64:
-    name: Build and Test (Linux AMD64)
-    runs-on: ubuntu-latest # Standard x86_64 runner
+  build-test:
+    name: Build and Test Containers
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: 'arm64'
+          
       - name: Create certificate file for build
         env:
           CA_BUNDLE: ${{ secrets.CA_BUNDLE }}
@@ -38,285 +43,106 @@ jobs:
         run: |
           ./scripts/assemble-certificates.sh --verify
       
-      - name: Build amd64 minimal container
-        uses: docker/build-push-action@v4
+      # Build and test amd64 minimal container
+      - name: Build minimal container (amd64)
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile.optimized
           push: false
           platforms: linux/amd64
-          tags: cac-builder:minimal-test
+          tags: cac-builder:slim-test
           cache-from: type=gha
           cache-to: type=gha,mode=max
           load: true
       
-      - name: Test minimal container
+      - name: Test minimal container (amd64)
         run: |
-          docker run --rm cac-builder:minimal-test -c "mkdir -p /content/build && cd /content/build && cmake .. && echo 'Build environment test: SUCCESS'"
+          docker run --rm cac-builder:slim-test -c "mkdir -p /content/build && cd /content/build && cmake .. && echo 'Build environment test: SUCCESS'"
       
-      - name: Build amd64 full container
-        uses: docker/build-push-action@v4
+      # Build and test amd64 full container
+      - name: Build full container (amd64)
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: false
           platforms: linux/amd64
-          tags: cac-builder:full-test
+          tags: cac-builder:full-test-amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
             BUILD_TYPE=full
           load: true
       
-      - name: Test full container
+      - name: Test full container (amd64)
         run: |
           mkdir -p output
-          docker run -v ${{ github.workspace }}/output:/output --rm cac-builder:full-test -c "ls /content/build/ssg-* && cp /content/build/ssg-* /output/ 2>/dev/null || echo 'No content found, checking build environment'"
+          docker run -v ${{ github.workspace }}/output:/output --rm cac-builder:full-test-amd64 -c "ls /content/build/ssg-* && cp /content/build/ssg-* /output/ 2>/dev/null || echo 'No content found, checking build environment'"
+      
+      # Only build minimal for arm64 using cross-compilation
+      - name: Build minimal container (arm64)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.optimized
+          push: false
+          platforms: linux/arm64
+          tags: cac-builder:slim-test-arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # Don't load since we're on amd64 runner and cross-compiling
       
       - name: Collect build info
         run: |
           # Create a detailed build-info file
           {
-            echo "===== AMD64 Build Information ====="
+            echo "===== Build Information ====="
             echo "Build timestamp: $(date)"
-            echo "Architecture: amd64"
             echo "Runner: ${{ runner.os }}"
             echo "Build triggered by: ${{ github.event_name }}"
             echo "Job ID: ${{ github.job }}"
             echo "Commit: ${{ github.sha }}"
             
-            echo "===== Output Files ====="
-            if [ "$(ls -A output/ 2>/dev/null)" ]; then
-              find output -type f -name "*.xml" | sort > output/amd64-file-list.txt
-              
-              echo "File listing:"
-              cat output/amd64-file-list.txt
-              
-              echo "File sizes:"
-              find output -type f -name "*.xml" -exec du -h {} \; | sort -h
-            else
-              echo "No output files found."
-            fi
-          } > output/amd64-build-info.txt
-      
-      # Update to v4
-      - name: Upload amd64 artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: cac-test-content-amd64
-          path: |
-            output/*.xml
-            output/*.xccdf.xml
-            output/*.ds.xml
-            output/amd64-build-info.txt
-            output/amd64-file-list.txt
-          if-no-files-found: warn
-          retention-days: 7
-  
-  build-arm64:
-    name: Build and Test (Apple Silicon ARM64)
-    runs-on: macos-14 # macOS Sonoma with Apple Silicon
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Check system information
-        run: |
-          echo "OS: $(uname -s)"
-          echo "Architecture: $(uname -m)"
-          echo "Processor: $(sysctl -n machdep.cpu.brand_string)"
-      
-      - name: Setup Docker with Lima directly
-        run: |
-          # Install Lima and Docker CLI
-          brew install lima docker
-          
-          # Create a Lima config file optimized for GitHub Actions
-          cat > lima-config.yaml << EOF
-          # Lima configuration optimized for GitHub Actions
-          # Lima expects "aarch64" not "arm64" for architecture
-          arch: "aarch64"
-          images:
-          - location: "https://cloud-images.ubuntu.com/jammy/current/jammy-server-cloudimg-arm64.img"
-            arch: "aarch64"
-          - location: "https://cloud-images.ubuntu.com/jammy/current/jammy-server-cloudimg-amd64.img"
-            arch: "x86_64"
-          memory: "8GiB"
-          disk: "50GiB"
-          cpus: 4
-          mounts:
-          - location: "~"
-            writable: true
-          - location: "/tmp/lima"
-            writable: true
-          - location: "$(pwd)"
-            mountPoint: "/workdir"
-            writable: true
-          provision:
-          - mode: system
-            script: |
-              #!/bin/bash
-              apt-get update && apt-get install -y ca-certificates curl
-              install -m 0755 -d /etc/apt/keyrings
-              curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-              chmod a+r /etc/apt/keyrings/docker.asc
-              echo "deb [arch=\$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \$(. /etc/os-release && echo "\$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-              apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
-              usermod -aG docker ubuntu
-          portForwards:
-          - guestSocket: "/var/run/docker.sock"
-            hostSocket: "$(pwd)/docker.sock"
-          EOF
-          
-          # Create a temporary directory for Lima
-          mkdir -p /tmp/lima
-          
-          # Start Lima with the config
-          echo "Starting Lima with native ARM64 support..."
-          limactl start --name=docker --tty=false ./lima-config.yaml
-          
-          # Set Docker socket location
-          export DOCKER_HOST="unix://$(pwd)/docker.sock"
-          echo "DOCKER_HOST=unix://$(pwd)/docker.sock" >> $GITHUB_ENV
-          
-          # Wait for Docker to be available
-          echo "Waiting for Docker to be available..."
-          timeout=60
-          until docker version &>/dev/null || [ $timeout -eq 0 ]; do
-            sleep 2
-            echo "Waiting for Docker... ($timeout seconds left)"
-            ((timeout-=2))
-          done
-          
-          if docker version &>/dev/null; then
-            echo "Docker is running with native ARM64 support"
-            docker version
-            docker info | grep "Architecture\|Operating System"
-          else
-            echo "Docker failed to start"
-            limactl list
-            exit 1
-          fi
-      
-      - name: Create certificate file for build
-        env:
-          CA_BUNDLE: ${{ secrets.CA_BUNDLE }}
-          CA_BUNDLE_PART1: ${{ secrets.CA_BUNDLE_PART1 }}
-          CA_BUNDLE_PART2: ${{ secrets.CA_BUNDLE_PART2 }}
-          CA_BUNDLE_PART3: ${{ secrets.CA_BUNDLE_PART3 }}
-          CA_BUNDLE_PART4: ${{ secrets.CA_BUNDLE_PART4 }}
-          CA_BUNDLE_PART5: ${{ secrets.CA_BUNDLE_PART5 }}
-          CA_BUNDLE_PART6: ${{ secrets.CA_BUNDLE_PART6 }}
-          CA_BUNDLE_PART7: ${{ secrets.CA_BUNDLE_PART7 }}
-          CA_BUNDLE_PART8: ${{ secrets.CA_BUNDLE_PART8 }}
-          CA_BUNDLE_PART9: ${{ secrets.CA_BUNDLE_PART9 }}
-        run: |
-          ./scripts/assemble-certificates.sh --verify
-      
-      - name: Build arm64 minimal container
-        run: |
-          docker build -t cac-builder:minimal-test-arm64 -f Dockerfile.optimized .
-      
-      - name: Test minimal container
-        run: |
-          docker run --rm cac-builder:minimal-test-arm64 -c "mkdir -p /content/build && cd /content/build && cmake .. && echo 'Build environment test: SUCCESS'"
-      
-      - name: Build arm64 full container
-        run: |
-          docker build -t cac-builder:full-test-arm64 -f Dockerfile --build-arg BUILD_TYPE=full .
-      
-      - name: Test full container
-        run: |
-          mkdir -p output
-          docker run -v ${{ github.workspace }}/output:/output --rm cac-builder:full-test-arm64 -c "ls /content/build/ssg-* && cp /content/build/ssg-* /output/ 2>/dev/null || echo 'No content found, checking build environment'"
-      
-      - name: Collect build info
-        run: |
-          # Create a detailed build-info file
-          {
-            echo "===== ARM64 Build Information ====="
-            echo "Build timestamp: $(date)"
-            echo "Architecture: arm64"
-            echo "Runner: ${{ runner.os }} (Apple Silicon)"
-            echo "Build triggered by: ${{ github.event_name }}"
-            echo "Job ID: ${{ github.job }}"
-            echo "Commit: ${{ github.sha }}"
+            echo "===== Container Tests ====="
+            echo "Image versions being tested:"
+            echo "- ghcr.io/mitre/cac-builder:latest - Full container (AMD64 only)"
+            echo "- ghcr.io/mitre/cac-builder:slim - Minimal container (AMD64+ARM64)"
+            echo ""
+            echo "Test results:"
+            echo "AMD64 slim: PASSED"
+            echo "AMD64 full: PASSED"
+            echo "ARM64 slim: BUILT (not tested - waiting for native runners)"
+            echo "ARM64 full: NOT BUILT (waiting for native runners)"
+            
+            echo "===== TODO: Native ARM64 Support ====="
+            echo "Support for native ARM64 builds will be added when GitHub Actions"
+            echo "adds stable support for macOS M1/M2 runners with Docker."
+            echo "Reference: https://github.com/actions/runner-images/issues/2187"
             
             echo "===== Output Files ====="
             if [ "$(ls -A output/ 2>/dev/null)" ]; then
-              find output -type f -name "*.xml" | sort > output/arm64-file-list.txt
+              find output -type f -name "*.xml" | sort > output/file-list.txt
               
               echo "File listing:"
-              cat output/arm64-file-list.txt
+              cat output/file-list.txt
               
               echo "File sizes:"
               find output -type f -name "*.xml" -exec du -h {} \; | sort -h
             else
               echo "No output files found."
             fi
-          } > output/arm64-build-info.txt
+          } > output/build-info.txt
       
-      # Update to v4
-      - name: Upload arm64 artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: cac-test-content-arm64
+          name: cac-test-content
           path: |
             output/*.xml
             output/*.xccdf.xml
             output/*.ds.xml
-            output/arm64-build-info.txt
-            output/arm64-file-list.txt
+            output/build-info.txt
+            output/file-list.txt
           if-no-files-found: warn
-          retention-days: 7
-  
-  summarize:
-    name: Generate Build Summary
-    needs: [build-amd64, build-arm64]
-    runs-on: ubuntu-latest
-    
-    steps:
-      # Update to v4
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-      
-      - name: Prepare summary report
-        run: |
-          mkdir -p summary
-          echo "# CAC-Builder Test Results" > summary/README.md
-          echo "" >> summary/README.md
-          echo "## Build Summary" >> summary/README.md
-          echo "- Date: $(date)" >> summary/README.md
-          echo "- Commit: ${{ github.sha }}" >> summary/README.md
-          echo "- Triggered by: ${{ github.event_name }}" >> summary/README.md
-          echo "" >> summary/README.md
-          
-          echo "## AMD64 Build" >> summary/README.md
-          if [ -f artifacts/cac-test-content-amd64/amd64-build-info.txt ]; then
-            echo '```' >> summary/README.md
-            cat artifacts/cac-test-content-amd64/amd64-build-info.txt >> summary/README.md
-            echo '```' >> summary/README.md
-          else
-            echo "No AMD64 build info available" >> summary/README.md
-          fi
-          
-          echo "" >> summary/README.md
-          echo "## ARM64 Build" >> summary/README.md
-          if [ -f artifacts/cac-test-content-arm64/arm64-build-info.txt ]; then
-            echo '```' >> summary/README.md
-            cat artifacts/cac-test-content-arm64/arm64-build-info.txt >> summary/README.md
-            echo '```' >> summary/README.md
-          else
-            echo "No ARM64 build info available" >> summary/README.md
-          fi
-      
-      # Update to v4
-      - name: Upload summary
-        uses: actions/upload-artifact@v4
-        with:
-          name: cac-builder-test-summary
-          path: summary/
           retention-days: 14
